--- a/new.css
+++ b/new.css
@@ -1,6 +1,39 @@
-<!DOCTYPE CSS>
+#giant-title {
+	color:white;
+	margin: 40px;
+	border: 40px;
+	border-radius: 40px solid;
+	border-color: #00165A;
+}
 
-#center {
-	color:blue;
-	border-radius: 4px;
+#sidebar-thingy {
+	background-color: brown;
+	width: 200px;
+	float:center;
+	position: absolute;
+	top: 0;
+	right: 50;
+	left: 50;
+}
+
+#giant-box-in-middle {
+	background-color: brown;
+	margin: 0 auto;
+	width:800px;
+	height: 2000px;
+	
+}
+body {
+	background-color: black;
+	font-family:"Trebuchet MS", "Arial";
+	color: white;
+	text-align: center;
+}
+
+a {
+	color:yellow;
+}
+
+a:hover {
+	color: red;
 }
