--- a/new.css
+++ b/new.css
@@ -1,33 +1,29 @@
-#giant-title {
-	color:white;
-	margin: 40px;
-	border: 40px;
-	border-radius: 40px solid;
-	border-color: #00165A;
-}
-
-#sidebar-thingy {
-	background-color: brown;
-	width: 200px;
-	float:center;
-	position: absolute;
-	top: 0;
-	right: 50;
-	left: 50;
-}
-
-#giant-box-in-middle {
-	background-color: brown;
-	margin: 0 auto;
-	width:800px;
-	height: 2000px;
+#header {
+	border: 5px solid white ;
+	background-color: black;
+	border-radius: 20px;
+	margin: 0 70px 0 70px;
+	padding: 10px 20px 10px 20px;
+	text-align: center;
+	position: relative;
+	float: center;
 	
 }
 body {
-	background-color: black;
+	background-color: blue;
 	font-family:"Trebuchet MS", "Arial";
 	color: white;
-	text-align: center;
+
+}
+
+li {
+	display: inline;
+	margin: 70px;
+	border-radius: 30px;
+	border: 2px solid black;
+	background-color:white;
+	color: black;
+	text-align:justify;
 }
 
 a {
